# cmd/bryant/openapi.yaml
@@ -261,6 +261,28 @@ paths:
           $ref: "#/components/responses/BadRequest"
         "500":
           $ref: "#/components/responses/Internal"
+    patch:
+      operationId: editMatch
+      summary: Edit a match
+      tags:
+        - Match
+      security:
+        - BearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/MatchEdit"
+      responses:
+        "200":
+          description: OK
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "500":
+          $ref: "#/components/responses/Internal"
 
   /match-scout:
     get:
@@ -469,6 +491,16 @@ components:
         - league_uuid
         - away_team_uuid
         - home_team_uuid
+    MatchEdit:
+      type: object
+      properties:
+        match_uuid:
+          type: string
+          format: uuid
+        home_score:
+          type: integer
+        away_score:
+          type: integer
     Match:
       type: object
       properties:
